--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -11,6 +11,12 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-    <%= yield %>
+    <div class="container m-5">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
